--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="save">保存</string>
     <string name="save_success">保存成功</string>
     <string name="save_failed">保存失败</string>
+    <string name="dcim">相册</string>
 </resources>
